      User and Group. Now you can choose port values under 1024, start
      Tor as root, and have Tor bind those ports before it changes to
      another UID.
    - New ConstrainedSockets option to set SO_SNDBUF and SO_RCVBUF on TCP
      sockets. Hopefully useful for Tor servers running on "vserver"
      accounts. (Patch from coderman.)

  o Security fixes:
    - Directory authorities now call routers Fast if their bandwidth is
      at least 100KB/s, and consider their bandwidth adequate to be a
      Guard if it is at least 250KB/s, no matter the medians. This fix
      complements proposal 107. [Bugfix on 0.1.2.x]
    - Directory authorities now never mark more than 3 servers per IP as
      Valid and Running.  (Implements proposal 109, by Kevin Bauer and
      Damon McCoy.)

  o Major bugfixes (directory):
    - Rewrite directory tokenization code to never run off the end of
      a string. Fixes bug 455. Patch from croup. [Bugfix on 0.1.2.x]

  o Minor features (controller):
    - Add a SOURCE_ADDR field to STREAM NEW events so that controllers can
      match requests to applications. (Patch from Robert Hogan.)
    - Report address and port correctly on connections to DNSPort. (Patch
      from Robert Hogan.)
    - Add a RESOLVE command to launch hostname lookups. (Original patch
      from Robert Hogan.)
    - Add GETINFO status/enough-dir-info to let controllers tell whether
      Tor has downloaded sufficient directory information. (Patch
      from Tup.)
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that
      support them. (Patch from Peter Palfrader.)
    - STREAM NEW events are generated for DNSPort requests and for
      tunneled directory connections. (Patch from Robert Hogan.)
    - New "GETINFO address-mappings/*" command to get address mappings
      with expiry information. "addr-mappings/*" is now deprecated.
      (Patch from Tup.)
